--- a/css/generalstyle.css
+++ b/css/generalstyle.css
@@ -233,7 +233,7 @@ body {
 } */
 .animf {
   animation-name: textanim;
-  animation-duration: 1s;
+  animation-duration: 0.75s;
   animation-iteration-count: 1;
 }
 .animline2 span {
@@ -595,6 +595,19 @@ form {
   margin-bottom: -10px;
   margin-left: 20px;
 }
+.makeappear>div{
+  opacity: 0;
+  transform: translateY(20px);
+}
+.makeappear2>div{
+  opacity: 0;
+  transform: translateY(20px);
+}
+.makeappear3>div{
+  opacity: 0;
+  transform: translateY(20px);
+}
+
 @media screen and (min-width: 700px) {
   .articles {
     margin-top: 100px;
